[package]
name = "byond_map-profile_parser"
description = "A tool to parse and graph changes in BYOND map profiling data."
version = "1.0.0"
authors = ["ZeWaka <zewakagamer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
plotters = "^0.3"
collecting-hashmap = "^0.2"
ordered-float = "^2.0"
sanitize-filename = "^0.3"
chrono = "^0.4"
regex = "^1.5"
num = "^0.4"
